syntax = "proto3";
package neutron.dex;

option go_package = "github.com/neutron-org/neutron/x/dex/types";

import "neutron/dex/pair_id.proto";

message PoolMetadata {
  uint64 id = 1;
  int64 tick = 2;
  uint64 fee = 3;
  PairID pair_id = 4;
}
